# Robot-Joint-Firmware-Platform

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
ci/: build.yml  firmware_check.yml  test.yml
comms/: can_interface.cpp  crc.cpp  packet.cpp  packet.h  uart_interface.cpp
control/filters/: complementary.cpp  low_pass.cpp  low_pass.h
control/models/: motor_model.cpp
control/pid/: pid.cpp  pid.h
control/trajectory/: spline.cpp  trajectory_generator.cpp
docker/: Dockerfile  dev_env.yml
docs/: architecture.md  communication_protocol.md  control_system.md
drivers/comms/: i2c.cpp  spi.cpp  uart.cpp
drivers/encoder/: encoder_driver.cpp  encoder_driver.h
drivers/imu/: imu_driver.cpp  imu_driver.h
drivers/motor/: motor_control.cpp  motor_driver.h  pwm_driver.cpp
firmware/include/: control_loop.h
firmware/src/: main.cpp
firmware/src/app/: control_loop.cpp  estimator.cpp  (+2 more)
hardware/: BOM.md  assembly.md
python/analysis/: log_parser.py  metrics.py  plot_response.py
python/calibration/: encoder_calibration.py  motor_characterization.py  pid_tuner.py
python/client/: robot_interface.py  serial_client.py
python/dashboard/: live_plot.py
scripts/: build.sh  collect_logs.sh  flash.sh  run_all_tests.sh
simulation/: control_sim.py  motor_sim.py  system_model.py
tests/hardware_in_loop/: disturbance_test.py  logging_test.py  step_response_test.py
tests/integration/: test_comm_protocol.py  test_control_loop.py
tests/unit/: test_filters.cpp  test_pid.cpp
tools/: benchmark_runner.py  flash_firmware.sh  log_downloader.py  serial_monitor.py
(+6 files in other folders)
